--- a/.gitignore
+++ b/.gitignore
@@ -40,9 +40,13 @@
 
 # Build data
 /build/
+/web/dist/*
 
 # Composer PHAR
 /composer.phar
 
 # Backup entities generated with doctrine:generate:entities command
 */Entity/*~
+
+# IDE's files
+/.idea/
