--- a/composer.json
+++ b/composer.json
@@ -53,7 +53,12 @@
         "symfony-web-dir": "web",
         "symfony-assets-install": "relative",
         "incenteev-parameters": {
-            "file": "app/config/parameters.yml"
+            "file": "app/config/parameters.yml",
+            "env-map": {
+                "database_name": "dbname",
+                "database_password": "dbpass",
+                "database_user": "dbuser"
+            }
         },
         "branch-alias": {
             "dev-master": "2.8-dev"
