--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "karma-phantomjs-launcher": "1.0.0",
     "karma-typescript-preprocessor": "0.0.21",
     "karma-remap-istanbul": "0.0.6",
+    "phantomjs-prebuilt": "2.1.13",
+    "jasmine-core": "2.5.2",
     "merge2": "1.0.2",
     "node-normalize-scss": "^1.3.0",
     "run-sequence": "1.1.5"
