--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "",
   "options": {
-    "app_src": "front_src/app/source/",
-    "app_build": "front_src/app/build/",
-    "app_test": "front_src/app/test_build/",
-    "app_layout_src": "front_src/app/source/scss/",
+    "app_src": "source_js/source/",
+    "app_build": "source_js/build/",
+    "app_test": "source_js/test_build/",
+    "app_layout_src": "source_js/source/scss/",
     "dist": "web/dist/",
     "libs": "node_modules/"
   },
@@ -21,54 +21,37 @@
   "dependencies": {
     "angular": "1.5.8",
     "angular-mocks": "1.5.8",
-    "angular-ui-bootstrap": "2.2.0",
+    "angular-animate": "1.5.8",
+    "angular-aria": "1.5.8",
+    "angular-messages": "1.5.8",
     "angular-ui-router": "0.3.1",
-    "bootstrap": "3.3.6",
-    "font-awesome": "4.6.3",
+    "angular-material": "1.1.1",
+    "font-awesome": "4.7.0",
     "jquery": "2.2.4",
     "lodash": "4.16.4",
-    "tsd": "0.5.6",
-    "tslint": "3.2.1",
-    "typescript": "1.7.5"
+    "typings": "1.5.0",
+    "tslint": "3.15.1",
+    "typescript": "2.0.6"
   },
   "devDependencies": {
-    "bootstrap-sass": "^3.3.6",
-    "del": "2.2.0",
+    "del": "2.2.2",
     "gulp": "3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-changed": "1.3.0",
+    "gulp-autoprefixer": "3.1.1",
+    "gulp-changed": "1.3.2",
     "gulp-clean-css": "2.0.4",
     "gulp-concat": "2.6.0",
-    "gulp-data": "^1.2.1",
-    "gulp-foreach": "^0.1.0",
-    "gulp-jade": "1.1.0",
-    "gulp-less": "3.0.5",
-    "gulp-load-plugins": "1.2.0",
-    "gulp-ng-template": "0.2.2",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.2.0",
-    "gulp-size": "2.1.0",
-    "gulp-sourcemaps": "1.6.0",
+    "gulp-pug": "3.1.0",
+    "gulp-load-plugins": "1.3.0",
+    "gulp-ng-template": "0.2.3",
+    "gulp-rename": "1.2.2",
+    "gulp-sass": "2.3.2",
+    "gulp-sourcemaps": "2.2.0",
     "gulp-stats": "0.0.3",
-    "gulp-svgmin": "^1.2.2",
-    "gulp-svgstore": "^6.0.0",
-    "gulp-tsd": "0.1.1",
-    "gulp-tslint": "4.3.4",
-    "gulp-typescript": "2.12.2",
-    "gulp-uglify": "1.5.3",
-    "karma": "0.13.22",
-    "karma-chrome-launcher": "0.2.3",
-    "karma-coverage": "0.5.4",
-    "karma-firefox-launcher": "0.1.7",
-    "karma-jasmine": "0.3.8",
-    "karma-junit-reporter": "0.4.1",
-    "karma-phantomjs-launcher": "1.0.0",
-    "karma-typescript-preprocessor": "0.0.21",
-    "karma-remap-istanbul": "0.0.6",
-    "phantomjs-prebuilt": "2.1.13",
-    "jasmine-core": "2.5.2",
+    "gulp-typings": "2.0.4",
+    "gulp-tslint": "6.1.2",
+    "gulp-typescript": "3.1.2",
+    "gulp-uglify": "2.0.0",
     "merge2": "1.0.2",
-    "node-normalize-scss": "^1.3.0",
-    "run-sequence": "1.1.5"
+    "run-sequence": "1.2.2"
   }
 }
