--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "options": {
     "app_src": "source_js/source/",
     "app_build": "source_js/build/",
-    "app_test": "source_js/test_build/",
     "app_layout_src": "source_js/source/scss/",
     "dist": "web/dist/",
     "libs": "node_modules/"
@@ -40,17 +39,23 @@
     "gulp-changed": "1.3.2",
     "gulp-clean-css": "2.0.4",
     "gulp-concat": "2.6.0",
-    "gulp-pug": "3.1.0",
     "gulp-load-plugins": "1.3.0",
     "gulp-ng-template": "0.2.3",
+    "gulp-pug": "3.1.0",
     "gulp-rename": "1.2.2",
     "gulp-sass": "2.3.2",
     "gulp-sourcemaps": "2.2.0",
     "gulp-stats": "0.0.3",
-    "gulp-typings": "2.0.4",
     "gulp-tslint": "6.1.2",
     "gulp-typescript": "3.1.2",
+    "gulp-typings": "2.0.4",
     "gulp-uglify": "2.0.0",
+    "jasmine-core": "2.5.2",
+    "karma": "1.3.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "1.0.2",
+    "karma-nyan-reporter": "0.2.4",
+    "karma-typescript": "git://github.com/monounity/karma-typescript.git#2.1",
     "merge2": "1.0.2",
     "run-sequence": "1.2.2"
   }
