--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "dist": "web/dist/",
     "libs": "node_modules/"
   },
+  "scripts": {
+    "link": "sudo npm link json-server"
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/kubut/builder.git"
@@ -57,6 +60,7 @@
     "karma-nyan-reporter": "0.2.4",
     "karma-typescript": "git://github.com/monounity/karma-typescript.git#2.1",
     "merge2": "1.0.2",
-    "run-sequence": "1.2.2"
+    "run-sequence": "1.2.2",
+    "json-server": "0.8.23"
   }
 }
