--- a/package.json
+++ b/package.json
@@ -29,12 +29,13 @@
     "angular-ui-router": "0.3.1",
     "angular-material": "1.1.1",
     "angular-material-data-table": "0.10.9",
+    "angular-password": "1.0.3",
     "font-awesome": "4.7.0",
     "jquery": "2.2.4",
     "lodash": "4.16.4",
-    "typings": "1.5.0",
+    "typings": "2.0.0",
     "tslint": "3.15.1",
-    "typescript": "2.0.7"
+    "typescript": "2.0.8"
   },
   "devDependencies": {
     "del": "2.2.2",
