--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "1.0.2",
     "karma-nyan-reporter": "0.2.4",
-    "karma-typescript": "git://github.com/monounity/karma-typescript.git#2.1",
+    "karma-typescript": "2.1.2",
     "merge2": "1.0.2",
     "run-sequence": "1.2.2",
     "json-server": "0.8.23",
