--- a/package.json
+++ b/package.json
@@ -22,23 +22,25 @@
   },
   "dependencies": {
     "angular": "1.5.8",
-    "angular-mocks": "1.5.8",
     "angular-animate": "1.5.8",
     "angular-aria": "1.5.8",
-    "angular-messages": "1.5.8",
-    "angular-ui-router": "0.3.1",
     "angular-material": "1.1.1",
     "angular-material-data-table": "0.10.9",
+    "angular-messages": "1.5.8",
+    "angular-mocks": "1.5.8",
     "angular-password": "1.0.3",
+    "angular-ui-router": "0.3.1",
     "font-awesome": "4.7.0",
+    "gulp": "^3.9.1",
     "jquery": "2.2.4",
     "lodash": "4.16.4",
-    "typings": "2.0.0",
     "tslint": "3.15.1",
-    "typescript": "2.0.8"
+    "typescript": "2.0.10",
+    "typings": "2.0.0"
   },
   "devDependencies": {
     "del": "2.2.2",
+    "faker": "3.1.0",
     "gulp": "3.9.1",
     "gulp-autoprefixer": "3.1.1",
     "gulp-changed": "1.3.2",
@@ -56,14 +58,13 @@
     "gulp-typings": "2.0.4",
     "gulp-uglify": "2.0.0",
     "jasmine-core": "2.5.2",
+    "json-server": "0.9.0",
     "karma": "1.3.0",
     "karma-jasmine": "^1.0.2",
-    "karma-phantomjs-launcher": "1.0.2",
     "karma-nyan-reporter": "0.2.4",
-    "karma-typescript": "2.1.2",
+    "karma-phantomjs-launcher": "1.0.2",
+    "karma-typescript": "git://github.com/monounity/karma-typescript.git#c98687ad38faa1bd5dc63282f81aeb1668a3f8c2",
     "merge2": "1.0.2",
-    "run-sequence": "1.2.2",
-    "json-server": "0.8.23",
-    "faker": "3.1.0"
+    "run-sequence": "1.2.2"
   }
 }
