--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "karma-jasmine": "^1.0.2",
     "karma-nyan-reporter": "0.2.4",
     "karma-phantomjs-launcher": "1.0.2",
-    "karma-typescript": "git://github.com/monounity/karma-typescript.git#c98687ad38faa1bd5dc63282f81aeb1668a3f8c2",
+    "karma-typescript": "2.1.3",
     "merge2": "1.0.2",
     "run-sequence": "1.2.2"
   }
