ADMIN - user list

--- a/src/BuilderBundle/Resources/config/services/sevices.yml
+++ b/src/BuilderBundle/Resources/config/services/sevices.yml
@@ -3,3 +3,8 @@ services:
         class: BuilderBundle\Services\SecurityService
         arguments:
           userModel: '@app.builder.model.user'
+
+    app.builder.service.user:
+        class: BuilderBundle\Services\UserService
+        arguments:
+          userModel: '@app.builder.model.user'
