--- a/src/BuilderBundle/Resources/config/services/factory.yml
+++ b/src/BuilderBundle/Resources/config/services/factory.yml
@@ -11,3 +11,6 @@ services:
 
     app.builder.factory.checklist_item:
         class: BuilderBundle\Factory\ChecklistItemFactory
+
+    app.builder.factory.database:
+        class: BuilderBundle\Factory\DatabaseFactory
