--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "nelmio/api-doc-bundle": "^2.13",
         "friendsofsymfony/jsrouting-bundle": "^1.6",
-        "doctrine/doctrine-migrations-bundle": "1.2.0"
+        "doctrine/doctrine-migrations-bundle": "1.2.0",
+        "cboden/ratchet": "^0.3.5"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
