--- a/src/BuilderBundle/Resources/config/services/model.yml
+++ b/src/BuilderBundle/Resources/config/services/model.yml
@@ -14,3 +14,7 @@ services:
     app.builder.model.checklist:
         class: BuilderBundle\Model\ChecklistModel
         arguments: ['@app.builder.factory.checklist', '@app.builder.repository.checklist', '@app.builder.model.checklist_item']
+
+    app.builder.model.database:
+        class: BuilderBundle\Model\DatabaseModel
+        arguments: ['@app.builder.factory.database', '@app.builder.repository.database']
