--- a/src/BuilderBundle/Resources/config/services/channels.yml
+++ b/src/BuilderBundle/Resources/config/services/channels.yml
@@ -1,8 +1,8 @@
 services:
     app.builder.websocket.channel.databases:
         class: BuilderBundle\WebSocket\Channels\Databases\DataBasesChannel
-        arguments: ['@app.builder.factory.action.database', '@app.builder.service.params_validator']
+        arguments: ['@app.builder.factory.action.database', '@app.builder.service.params_validator', '@app.builder.service.websocket.authentication']
 
     app.builder.websocket.channel.instances:
         class: BuilderBundle\WebSocket\Channels\Instances\InstancesChannel
-        arguments: ['@app.builder.factory.action.instances', '@app.builder.service.params_validator']
+        arguments: ['@app.builder.factory.action.instances', '@app.builder.service.params_validator', '@app.builder.service.websocket.authentication']
