--- a/src/BuilderBundle/Resources/config/services/listener.yml
+++ b/src/BuilderBundle/Resources/config/services/listener.yml
@@ -4,3 +4,9 @@ services:
     arguments: ['@translator.default', '%kernel.environment%']
     tags:
       - { name: kernel.event_listener, event: kernel.exception, method: onKernelException }
+
+  app.builder.listener.authentication:
+    class: BuilderBundle\Listener\AuthenticationListener
+    arguments: ['@app.builder.model.authentication']
+    tags:
+      - { name: kernel.event_listener, event: security.interactive_login, method: onSecurityInteractiveLogin }
