Added checklist on dashboard and mijor fixes

--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -14,3 +14,4 @@ parameters:
     socket_port: 8080
     socket_databases: databases
     socket_instances: instances
+    portal_url: .builder.vagrant
