--- a/src/BuilderBundle/Resources/config/services/channels.yml
+++ b/src/BuilderBundle/Resources/config/services/channels.yml
@@ -1,6 +1,6 @@
 services:
     app.builder.websocket.channel.databases:
-        class: BuilderBundle\WebSocket\Channels\Databases\DataBasesChannel
+        class: BuilderBundle\WebSocket\Channels\Databases\DatabasesChannel
         arguments: ['@app.builder.factory.action.database', '@app.builder.service.params_validator', '@app.builder.service.websocket.authentication']
 
     app.builder.websocket.channel.instances:
