--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -17,7 +17,7 @@ parameters:
 
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
-    socket_host: ws://builder.vagrant
+    socket_host: builder.vagrant
     socket_port: 8080;
     socket_databases: databases
     socket_instances: instances
