--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "lodash": "4.16.4",
     "tslint": "3.15.1",
     "typescript": "2.0.10",
-    "typings": "2.0.0"
+    "typings": "2.0.0",
+    "weboscket": "1.0.24"
   },
   "devDependencies": {
     "del": "2.2.2",
