--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "tslint": "3.15.1",
     "typescript": "2.0.10",
     "typings": "2.0.0",
-    "weboscket": "1.0.24"
+    "websocket": "1.0.24"
   },
   "devDependencies": {
     "del": "2.2.2",
